# zemlya-tabel

./: .env.preprod.example  .gitignore  CLAUDE.md  README.md  deploy.sh  dev.sh  docker-compose.preprod.yml  install.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ebe9fa53315_create_timesheet_periods.py  59a2b3cf4826_add_is_active_to_references.py  5a04bd448acf_create_timesheet_entries_table.py  685b31c8afcc_add_adjustments_loan_fields_and_loan_.py  74cf30a02e9b_production_calendars_table.py  a1b2c3d4e5f6_merge_users_into_employees.py  a3b4c5d6e7f8_add_schedule_type.py  b5c6d7e8f9a0_hours_to_integer.py  c6d7e8f9a0b1_employee_weekend_pay.py  cee886016f5e_create_core_tables.py  d7e8f9a0b1c2_overtime_coefficient.py  e8f9a0b1c2d3_company_shares.py
backend/app/: cli.py  config.py  database.py  main.py
backend/app/core/: audit.py  deps.py  security.py
backend/app/models/: __init__.py  audit_log.py  companies.py  company_shares.py  departments.py  employee_adjustments.py  employees.py  loan_deductions.py  production_calendars.py  schedules.py  timesheet_entries.py  timesheet_periods.py  users.py
backend/app/routers/: auth.py  calendar.py  companies.py  dashboard.py  departments.py  employees.py  schedules.py  timesheet.py  users.py
backend/app/schemas/: auth.py  calendar.py  (+11 more)
backend/tests/: conftest.py  test_auth.py  test_calendar.py  test_companies.py  test_dashboard.py  test_departments.py  test_employees.py  test_payout.py  test_payroll.py  test_payroll_statement.py  test_schedules.py  test_task33_improvements.py  test_timesheet.py  test_timesheet_export.py  test_timesheet_periods.py  test_users.py
(+65 files in other folders)
